--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
 
             <div class="experiance__company">
-               <h4 class="experiance__subtitle _subtitle">Фронтенд розробник <span class="_gereen-mod">UpWork / Weblancer</span> </h4>
+               <h4 class="experiance__subtitle _subtitle">Фронтенд розробник <span class="_green-mod">UpWork / Weblancer</span> </h4>
                <span class="experiance__period _period">
                   Квітень 2021 - дотепер | Міжнародна
                </span>
@@ -122,7 +122,7 @@
                </div>
             </div>
 
-            <h4 class="education__subtitle _subtitle">Інженер-механік <span class="_gereen-mod"> НУВГП </span></h4>
+            <h4 class="education__subtitle _subtitle">Інженер-механік <span class="_green-mod"> НУВГП </span></h4>
             <span class="education__period _period">
                Вересень 2010 - Червень 2015 | Україна
             </span>
@@ -141,8 +141,9 @@
             </div>
 
             <p class="about__text _anim-items">
-               Я людина із активною життєвою позицією. Тому слідом за технологіями хочеться розвиватися і собі. Я відкритий до знань і охоче переймаю навики досвідченніших колег. Бажаю вивчати React/Angular, PHP та вдосконалити англійську. То ж буду радий потрапити в команду професіоналів, де ми зможемо один одному бути корисними. 
-               Не маю шкідливих звичок, дуже шаную спорт і здоровий спосіб життя.
+               Я людина із активною життєвою позицією. Тому слідом за технологіями хочеться розвиватися і собі. ІТ напрямок найкнайкраще підходить для саморозвитку, так як швидкі зміни даної ніши спонукають до постійної активності і пізнання. Добре працюю в команді, але і не проти лишитися наодинці. Інколи займаюся волонтерством (допомога тваринам).
+               Я відкритий до знань і охоче переймаю навики досвідченніших колег. Бажаю вивчати React/Angular, PHP та вдосконалити англійську. То ж буду радий потрапити в команду професіоналів, де ми зможемо один одному бути корисними. 
+               Не маю шкідливих звичок, дуже шаную спорт і здоровий спосіб життя. Відвідую тренажерний зал, бігаю та граю інтелектуально-розвиваючу гру Мафія.
             </p>
          </div>
       </main>
@@ -289,14 +290,14 @@
             <!-- Courses -->
             <div class="courses">
                <h3 class="skills__title">Курси</h3> 
-                    <ul>
-                        <li class="skills__item">
-                           <span class="skills__text">GoIT - HTML/CSS</span>
-                        </li>
-                        <li class="skills__item">
-                           <span class="skills__text">Udemy - JS + React</span>
-                        </li>
-                    </ul>
+                  <ul>
+                     <li class="skills__item">
+                        <span class="skills__text">GoIT - HTML/CSS</span>
+                     </li>
+                     <li class="skills__item">
+                        <span class="skills__text">Udemy - Java Script</span>
+                     </li>
+                  </ul>
             </div>
 
          </div>
